examples/global_forward.error
examples/global_forward.etch:1:17: error: use of uninitialized variable 'x' - variable may not be initialized in all control flow paths
  1 | let y: string = x;
                      ^
  2 | let x: string = "global";