examples/global_forward.etch
let y: string = x;
let x: string = "global";
fn main() -> void { print(y); }
